src/patternfly/components/Drawer/drawer.scss
/* ... */
// Responsive width modifiers
@each $breakpoint, $breakpoint-value in $pf-c-drawer--breakpoint-map--width {
  $breakpoint-name: if($breakpoint != "base", -on-#{$breakpoint}, "");

  @if $breakpoint == "base" {
    $breakpoint: "md";
  }

  @include pf-apply-breakpoint($breakpoint) {
    @each $width-value in $pf-c-drawer__panel--list--width {
      .pf-c-drawer__panel.pf-m-width-#{$width-value}#{$breakpoint-name} {
        --pf-c-drawer__panel--FlexBasis: #{percentage($width-value / 100)};
      }
    }
  }
}

// Responsive modifiers
@each $breakpoint, $breakpoint-value in $pf-c-drawer--breakpoint-map {
  $breakpoint-name: if($breakpoint != "base", -on-#{$breakpoint}, "");

  @if $breakpoint == "base" {
    $breakpoint: "md";
  }

  @include pf-apply-breakpoint($breakpoint) {
    // Drawer and inline
    .pf-c-drawer.pf-m-inline#{$breakpoint-name},
    .pf-c-drawer.pf-m-static#{$breakpoint-name} {
      > .pf-c-drawer__main > .pf-c-drawer__content {
        flex-shrink: 1;
      }

      > .pf-c-drawer__main > .pf-c-drawer__panel {
        --pf-c-drawer--m-expanded__panel--BoxShadow: none;

        &:not(.pf-m-no-border)::after {
          background-color: var(--pf-c-drawer--m-inline--m-expanded__panel--after--BackgroundColor);
        }
      }
    }

    // Drawer inline
    .pf-c-drawer.pf-m-inline#{$breakpoint-name} {
      > .pf-c-drawer__main > .pf-c-drawer__content {
        overflow-x: auto;
      }

      > .pf-c-drawer__main > .pf-c-drawer__panel {
        margin-left: calc(var(--pf-c-drawer__panel--FlexBasis) * -1);
        transform: translateX(100%);
      }

      // stylelint-disable selector-max-class, selector-max-combinators, selector-max-compound-selectors
      // Inline, expanded
      &.pf-m-expanded > .pf-c-drawer__main > .pf-c-drawer__panel {
        margin-left: 0;
        transform: translateX(0);
      }

      > .pf-c-drawer__main > .pf-c-drawer__panel > .pf-c-drawer__body > .pf-c-drawer__head .pf-c-drawer__close {
        display: unset;
        visibility: visible;
      }

      // Panel left
      &.pf-m-panel-left {
        > .pf-c-drawer__main > .pf-c-drawer__panel {
          margin-right: calc(var(--pf-c-drawer__panel--FlexBasis) * -1);
          margin-left: 0;
          transform: translateX(-100%);
        }

        // Inline, expanded, panel left
        &.pf-m-expanded > .pf-c-drawer__main > .pf-c-drawer__panel {
          margin-right: 0;
          transform: translateX(0);
        }

        > .pf-c-drawer__main > .pf-c-drawer__panel > .pf-c-drawer__body > .pf-c-drawer__head .pf-c-drawer__close {
          display: unset;
          visibility: visible;
        }
        // stylelint-enable
      }
    }

    // Static
    .pf-c-drawer.pf-m-static#{$breakpoint-name} {
      > .pf-c-drawer__main > .pf-c-drawer__panel {
        transform: translateX(0);
      }

      // stylelint-disable max-nesting-depth, selector-max-class, selector-max-combinators, selector-max-compound-selectors
      &.pf-m-panel-left {
        > .pf-c-drawer__main > .pf-c-drawer__panel {
          margin-right: 0;
          transform: translateX(0);
        }
      }

      &.pf-m-panel-bottom {
        > .pf-c-drawer__main > .pf-c-drawer__panel {
          transform: translateX(0);
        }
      }

      > .pf-c-drawer__main > .pf-c-drawer__panel > .pf-c-drawer__body > .pf-c-drawer__head .pf-c-drawer__close {
        display: none;
        visibility: hidden;
      }
      // stylelint-enable
    }
  }
}

